--- a/rough.ipynb
+++ b/rough.ipynb
@@ -295,6 +295,15 @@
     "    f.write(f\"{i}: {el}\\n\")\n",
     "f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"data/t.txt\", \"w\")"
+   ]
   }
  ],
  "metadata": {
