date - october 10 working code

--- a/rough.ipynb
+++ b/rough.ipynb
@@ -304,6 +304,70 @@
    "source": [
     "f = open(\"data/t.txt\", \"w\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.41649026530416944"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.rand()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.9848, 0.0094, 0.0059]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch\n",
+    "t = nn.Softmax(dim=1)\n",
+    "te = torch.tensor([2.5103, -2.1449, -2.6127])\n",
+    "c = t(te.view(1,-1))\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "te = torch.tensor([2.5103, -2.1449, -2.6127])\n",
+    "te.size()\n"
+   ]
   }
  ],
  "metadata": {
